# cminify

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  clang-format-smol  cminify.cc  main.cc
